--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,5 +1,6 @@
 :root {
-  /* Variables CSS */
+  --dark-blue: #1d2a47;
+  --medium-blue: #4565ad;
+  --light-blue: #f5f8ff;
+  --white: #ffff;
 }
-
-/* Variables SASS */
