--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,3 +2,5 @@
 @use "base/initial-reset.scss";
 @use "config/variables.scss";
 @use "blocks/body.scss";
+@use "blocks/header.scss";
+@use "blocks/menu.scss";
